--- a/public/css/main.css
+++ b/public/css/main.css
@@ -80,6 +80,10 @@ textarea {
 	resize: vertical;
 }
 
+label {
+	cursor: pointer;
+}
+
 /* ==========================================================================
    Chrome Frame prompt
    ========================================================================== */
@@ -157,6 +161,47 @@ code { font-family: Monaco, Menlo, "Andale Mono", "lucida console", "Courier New
 .controllbar .execution_diag li.center { text-align: center; }
 .controllbar .execution_diag li:first-child { border-left: 0; }
 .controllbar .execution_diag li:last-child { border-right: 0; }
+
+.no-localstorage .controllbar .execution_diag li.remember { display: none; }
+.controllbar .execution_diag li.remember .button {
+	padding: 10px 10px 10px 0;
+	font-weight: normal;
+	cursor: pointer;
+	color: #666;
+}
+.controllbar .execution_diag li.remember .button.checked { color: #4D8867; }
+.controllbar .execution_diag li.remember .button:before {
+	display: inline-block;
+	content: "\2713";
+	margin-right: 10px;
+	vertical-align: text-bottom;
+	width: 16px;
+	height: 16px;
+	padding: 0;
+	color: #4D8867;
+	font-size: 14px;
+	line-height: 16px;
+	text-align: center;
+	background: rgba(0,0,0,.3);
+	border-radius: 2px;
+	text-shadow: none;
+	-webkit-box-shadow: inset 0 2px 1px rgba(0,0,0,.2), 0 0 0 1px rgba(255,255,255,.03), 0 1px 0 rgba(255,255,255,.11);
+	-opera-box-shadow: inset 0 2px 1px rgba(0,0,0,.2), 0 0 0 1px rgba(255,255,255,.03), 0 1px 0 rgba(255,255,255,.11);
+	-moz-box-shadow: inset 0 2px 1px rgba(0,0,0,.2), 0 0 0 1px rgba(255,255,255,.03), 0 1px 0 rgba(255,255,255,.11);
+	-ms-box-shadow: inset 0 2px 1px rgba(0,0,0,.2), 0 0 0 1px rgba(255,255,255,.03), 0 1px 0 rgba(255,255,255,.11);
+	box-shadow: inset 0 2px 1px rgba(0,0,0,.2), 0 0 0 1px rgba(255,255,255,.03), 0 1px 0 rgba(255,255,255,.11);
+	text-indent: 100%;
+	overflow: hidden;
+}
+.controllbar .execution_diag li.remember .button.checked:before {
+	-webkit-box-shadow: inset 0 2px 1px rgba(0, 0, 0, .2), 0 0 10px 2px rgba(26, 121, 68, 0.60), 0 0 0 1px rgba(255,255,255,.1), 0 1px 0 rgba(255, 255, 255, .11);
+	-opera-box-shadow: inset 0 2px 1px rgba(0, 0, 0, .2), 0 0 10px 2px rgba(26, 121, 68, 0.60), 0 0 0 1px rgba(255,255,255,.1), 0 1px 0 rgba(255, 255, 255, .11);
+	-moz-box-shadow: inset 0 2px 1px rgba(0, 0, 0, .2), 0 0 10px 2px rgba(26, 121, 68, 0.60), 0 0 0 1px rgba(255,255,255,.1), 0 1px 0 rgba(255, 255, 255, .11);
+	-ms-box-shadow: inset 0 2px 1px rgba(0, 0, 0, .2), 0 0 10px 2px rgba(26, 121, 68, 0.60), 0 0 0 1px rgba(255,255,255,.1), 0 1px 0 rgba(255, 255, 255, .11);
+	box-shadow: inset 0 2px 1px rgba(0, 0, 0, .2), 0 0 10px 2px rgba(26, 121, 68, 0.60), 0 0 0 1px rgba(255,255,255,.1), 0 1px 0 rgba(255, 255, 255, .11);
+	text-indent: 0;
+}
+
 
 .controllbar .execute {
 	position: absolute;
