Implementing SQL profiling, closes #5

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -30,14 +30,14 @@ body {
  */
 
 ::-moz-selection {
-	color: #222;
 	background: #eee;
+	color: #222;
 	text-shadow: none;
 }
 
 ::selection {
-	color: #222;
 	background: #eee;
+	color: #222;
 	text-shadow: none;
 }
 
@@ -102,26 +102,48 @@ label {
 pre,
 code { font-family: Monaco, Menlo, "Andale Mono", "lucida console", "Courier New", monospace; }
 
-.console { position: fixed; top: 0; right: 0; bottom: 0; left: 0; width: 100%; background: #222; overflow: hidden; }
+.console { position: fixed; top: 0; right: 0; bottom: 0; left: 0; overflow: hidden; width: 100%; background: #222; }
 
-.output { display: none; padding: 1.4em; color: #fff; text-shadow: 1px 1px 0 #000; overflow: auto; max-height: 40%; }
-.output .no_output { color: #666; }
-.output .output_holder { margin: 0; }
+.tabs { display: none; overflow: auto; margin: 0; padding: 0; max-height: 40%; color: #fff; list-style: none; text-shadow: 1px 1px 0 #000; }
+.tabs .muted { color: #666; }
+
+.tabs .output { overflow: auto; margin: 0; padding: 1.4em; max-height: 40%; color: #fff; text-shadow: 1px 1px 0 #000; }
+.tabs .output .output_holder { margin: 0; }
+
+.tabs .queries { margin: 0; padding: 0; list-style: none; }
+.tabs .queries li { margin: 0; padding: 0; border-top: 1px solid rgba(255,255,255,.05); border-bottom: 1px solid rgba(0,0,0,.3); }
+.tabs .queries li:first-child { border-top: 0; }
+.tabs .queries li:last-child { border-bottom: 0; }
+.tabs .queries li span { display: block; float: left; padding: 1em; }
+.tabs .queries li span { border-right: 1px solid rgba(255,255,255,.05); border-left: 1px solid rgba(0,0,0,.3); }
+.tabs .queries li span:first-child { border-left: 0; }
+.tabs .queries li span:last-child { border-right: 0; }
+.tabs .queries li .time { width: 100px; color: #888; text-align: right; font-weight: bold; font-size: .8em; line-height: 2.2em; }
+.tabs .queries li .query { color: #80A76A; font-family: Monaco, Menlo, "Andale Mono", "lucida console", "Courier New", monospace; }
 
 .controllbar {
-	position: relative;
 	z-index: 100;
 	width: 100%;
 	height: 50px;
 	border-bottom: 2px solid #1e1e1e;
 	background: #2e2e2e;
+	display: -webkit-box;
+	display: -opera-box;
+	display: -moz-box;
+	display: -ms-box;
+	display: box;
 }
+.no-flexbox .controllbar { position: relative; }
 .controllbar .execution_diag {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 30%;
-	font-size: .8em;
+	display: -webkit-box;
+	display: -opera-box;
+	display: -moz-box;
+	display: -ms-box;
+	display: box;
+	-webkit-box-pack: justify;
+	-moz-box-pack: justify;
+	-ms-box-pack: justify;
+	box-pack: justify;
 	overflow: hidden;
 	margin: 0;
 	padding: 0;
@@ -129,23 +151,27 @@ code { font-family: Monaco, Menlo, "Andale Mono", "lucida console", "Courier New
 	-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.05);
 	-moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.05);
 	box-shadow: inset 0 1px 0 rgba(255,255,255,.05);
-	list-style: none;
-	display: -webkit-box;
-	display: -opera-box;
-	display: -moz-box;
-	display: -ms-box;
-	display: box;
-}
-.controllbar .execution_diag li {
-	height: 100%;
-	padding: 0 1.4em;
-	border-right: 1px solid rgba(0,0,0,.2);
-	border-left: 1px solid rgba(255, 255, 255, .05);
-	line-height: 50px;
 	color: #777;
-	text-shadow: 1px 1px #000;
-	white-space: nowrap;
+	list-style: none;
+	text-shadow: 1px 1px rgba(0,0,0,.4);
+	font-size: .8em;
+	-webkit-box-flex: 1;
+	-opera-box-flex: 1;
+	-moz-box-flex: 1;
+	-ms-box-flex: 1;
+	box-flex: 1;
+}
+.no-flexbox .controllbar .execution_diag { margin: 0 200px 0 0; }
+
+.controllbar .execution_diag li {
 	overflow: hidden;
+	padding: 0 1.4em;
+	height: 100%;
+	border-right: 1px solid #232323;
+	border-left: 1px solid rgba(255, 255, 255, .05);
+	background-clip: border-box;
+	white-space: nowrap;
+	line-height: 50px;
 	-webkit-box-flex: 1;
 	-opera-box-flex: 1;
 	-moz-box-flex: 1;
@@ -154,62 +180,79 @@ code { font-family: Monaco, Menlo, "Andale Mono", "lucida console", "Courier New
 }
 .no-flexbox .controllbar .execution_diag li { float: left; }
 
-.controllbar .execution_diag li span { margin-left: 5px; font-weight: bold; color: #aaa; }
-.controllbar .execution_diag li span.divider { display: inline-block; width: 15px; }
+.controllbar .execution_diag li.execution { cursor: help; }
+.controllbar .execution_diag li span { color: #aaa; font-weight: bold; }
+.controllbar .execution_diag li .title { margin-right: 5px; color: inherit; font-weight: normal; font-style: italic; }
+.controllbar .execution_diag li .divider { display: inline-block; margin: 0 6px; color: #666; font-weight: normal; }
+.controllbar .execution_diag li .slash {   }
+
+.controllbar .execution_diag li.stretch { -webkit-box-flex: 4; -moz-box-flex: 4; -ms-box-flex: 4; box-flex: 4; }
 .controllbar .execution_diag li.error { color: #DB613B; }
 .controllbar .execution_diag li.loading { width: 100%; background: url('../img/loading.gif') no-repeat center center; }
 .controllbar .execution_diag li.center { text-align: center; }
 .controllbar .execution_diag li:first-child { border-left: 0; }
 .controllbar .execution_diag li:last-child { border-right: 0; }
 
-.no-localstorage .controllbar .execution_diag li.remember { display: none; }
-.controllbar .execution_diag li.remember .button {
-	padding: 10px 10px 10px 0;
-	font-weight: normal;
-	cursor: pointer;
-	color: #666;
+.controllbar .execution_diag li.clickable:hover,
+.controllbar .execution_diag li.clickable.active { background: rgba(255,255,255,.05); cursor: pointer; }
+.controllbar .execution_diag li.clickable.active { background: #222; }
+.csstransforms .controllbar .execution_diag li.clickable.active { position: relative; overflow: hidden; background: rgba(255,255,255,.04); }
+.csstransforms .controllbar .execution_diag li.clickable.active:hover { background: rgba(255,255,255,.08); }
+.csstransforms .controllbar .execution_diag li.clickable.active:before {
+	position: absolute;
+	top: -12px;
+	left: 50%;
+	display: block;
+	margin-left: -10px;
+	width: 20px;
+	height: 20px;
+	background: #222;
+	-webkit-box-shadow: 1px 1px 0 rgba(255,255,255,.08);
+	-moz-box-shadow: 1px 1px 0 rgba(255,255,255,.08);
+	box-shadow: 1px 1px 0 rgba(255,255,255,.08);
+	content: '';
+	-webkit-transform: rotate(45deg);
+	-moz-transform: rotate(45deg);
+	-ms-transform: rotate(45deg);
+	-o-transform: rotate(45deg);
+	transform: rotate(45deg);
 }
+.csstransforms .controllbar .execution_diag li.last-button { border-right-width: 3px; }
+
+.no-localstorage .controllbar .execution_diag li.remember { display: none; }
+.controllbar .execution_diag li.remember .button { padding: 10px 10px 10px 0; color: #666; font-weight: normal; cursor: pointer; }
 .controllbar .execution_diag li.remember .button.checked { color: #4D8867; }
 .controllbar .execution_diag li.remember .button:before {
 	display: inline-block;
-	content: "\2713";
+	overflow: hidden;
 	margin-right: 10px;
-	vertical-align: text-bottom;
+	padding: 0;
 	width: 16px;
 	height: 16px;
-	padding: 0;
+	border-radius: 2px;
+	background: rgba(0,0,0,.3);
+	-webkit-box-shadow: inset 0 2px 1px rgba(0,0,0,.2), 0 0 0 1px rgba(255,255,255,.03), 0 1px 0 rgba(255,255,255,.11);
+	-moz-box-shadow: inset 0 2px 1px rgba(0,0,0,.2), 0 0 0 1px rgba(255,255,255,.03), 0 1px 0 rgba(255,255,255,.11);
+	box-shadow: inset 0 2px 1px rgba(0,0,0,.2), 0 0 0 1px rgba(255,255,255,.03), 0 1px 0 rgba(255,255,255,.11);
 	color: #4D8867;
+	content: "\2713";
+	vertical-align: text-bottom;
+	text-align: center;
+	text-indent: 100%;
+	text-shadow: none;
 	font-size: 14px;
 	line-height: 16px;
-	text-align: center;
-	background: rgba(0,0,0,.3);
-	border-radius: 2px;
-	text-shadow: none;
-	-webkit-box-shadow: inset 0 2px 1px rgba(0,0,0,.2), 0 0 0 1px rgba(255,255,255,.03), 0 1px 0 rgba(255,255,255,.11);
-	-opera-box-shadow: inset 0 2px 1px rgba(0,0,0,.2), 0 0 0 1px rgba(255,255,255,.03), 0 1px 0 rgba(255,255,255,.11);
-	-moz-box-shadow: inset 0 2px 1px rgba(0,0,0,.2), 0 0 0 1px rgba(255,255,255,.03), 0 1px 0 rgba(255,255,255,.11);
-	-ms-box-shadow: inset 0 2px 1px rgba(0,0,0,.2), 0 0 0 1px rgba(255,255,255,.03), 0 1px 0 rgba(255,255,255,.11);
-	box-shadow: inset 0 2px 1px rgba(0,0,0,.2), 0 0 0 1px rgba(255,255,255,.03), 0 1px 0 rgba(255,255,255,.11);
-	text-indent: 100%;
-	overflow: hidden;
 }
 .controllbar .execution_diag li.remember .button.checked:before {
 	-webkit-box-shadow: inset 0 2px 1px rgba(0, 0, 0, .2), 0 0 10px 2px rgba(26, 121, 68, 0.60), 0 0 0 1px rgba(255,255,255,.1), 0 1px 0 rgba(255, 255, 255, .11);
-	-opera-box-shadow: inset 0 2px 1px rgba(0, 0, 0, .2), 0 0 10px 2px rgba(26, 121, 68, 0.60), 0 0 0 1px rgba(255,255,255,.1), 0 1px 0 rgba(255, 255, 255, .11);
 	-moz-box-shadow: inset 0 2px 1px rgba(0, 0, 0, .2), 0 0 10px 2px rgba(26, 121, 68, 0.60), 0 0 0 1px rgba(255,255,255,.1), 0 1px 0 rgba(255, 255, 255, .11);
-	-ms-box-shadow: inset 0 2px 1px rgba(0, 0, 0, .2), 0 0 10px 2px rgba(26, 121, 68, 0.60), 0 0 0 1px rgba(255,255,255,.1), 0 1px 0 rgba(255, 255, 255, .11);
 	box-shadow: inset 0 2px 1px rgba(0, 0, 0, .2), 0 0 10px 2px rgba(26, 121, 68, 0.60), 0 0 0 1px rgba(255,255,255,.1), 0 1px 0 rgba(255, 255, 255, .11);
 	text-indent: 0;
 }
 
 .controllbar .execute {
-	position: absolute;
-	top: 0;
-	right: 0;
+	width: 200px;
 	height: 100%;
-	width: 30%;
-	min-width: 200px;
-	line-height: 50px;
 	border: 0;
 	border-left: 1px solid #222;
 	background: #444;
@@ -217,25 +260,20 @@ code { font-family: Monaco, Menlo, "Andale Mono", "lucida console", "Courier New
 	-moz-box-shadow: inset 1px 1px 0 rgba(255,255,255,.1);
 	box-shadow: inset 1px 1px 0 rgba(255,255,255,.1);
 	color: #111;
+	text-align: center;
 	text-transform: uppercase;
 	text-shadow: 1px 1px 0 rgba(255,255,255,.1);
 	font-size: 1.1em;
-	text-align: center;
+	line-height: 50px;
 	cursor: pointer;
 }
+.no-flexbox .controllbar .execute { position: absolute; top: 0; right: 0; min-width: 200px; }
 .controllbar .execute:hover { background: #EB4D09; color: #fff; text-shadow: 1px 1px 1px rgba(0,0,0,.5); }
 
-.editor { position: absolute; left: 0; bottom: 0; right: 0; width: 100%; overflow: hidden; }
+.editor { position: absolute; right: 0; bottom: 0; left: 0; overflow: hidden; width: 100%; }
 .editor .CodeMirror .CodeMirror-lines { margin-left: 10px; padding: 1.4em 1em 1.4em 1em; }
 .editor .CodeMirror .CodeMirror-gutter-text { padding: 1.4em .2em 1.4em 1.4em; }
 .code { min-height: 200px; }
-
-/* Legacy profiler support, before I realized it won't work that way :) */
-#anbu-open-tabs {
-	-webkit-box-shadow: inset 0 1px 0 rgba(255,255,255,.05), 0 -1px 5px rgba(0,0,0,.2);
-	-moz-box-shadow: inset 0 1px 0 rgba(255,255,255,.05), 0 -1px 5px rgba(0,0,0,.2);
-	box-shadow: inset 0 1px 0 rgba(255,255,255,.05), 0 -1px 5px rgba(0,0,0,.2);
-}
 
 /* ==========================================================================
    Helper classes
